<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My Life Back</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- MENU DRAWER -->
    <string name="menu_ajudenos">Help Us</string>
    <string name="item_ajuda">Help</string>
    <string name="item_compartilhar">Share</string>
    <string name="item_avaliar">Rate</string>
    <string name="item_contato">Contact</string>
    <string name="item_sobre">About</string>

    <!-- PRINCIPAL -->
    <string name="bem_vindo">Welcome to the My Life Back</string>
    <string name="configurar_monitoramento">Settings</string>
    <string name="visualizar_historico">View History</string>

    <!-- MENU OPÇÕES -->
    <string name="copiar_configuracoes">Copy Settings</string>
    <string name="copiar_configuracoes_para">Copy settings to</string>
    <string name="botao_copiar">Copy</string>
    <string name="configuracoes_copiadas_sucesso">Settings copied successfully.</string>

    <!-- TABS -->
    <string name="domingo">S</string>
    <string name="segunda">M</string>
    <string name="terca">T</string>
    <string name="quarta">W</string>
    <string name="quinta">T</string>
    <string name="sexta">F</string>
    <string name="sabado">S</string>

    <string-array name="array_dias">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <!-- CONFIGURAR MONITORAMENTO -->
    <string name="tela_configuracoes">Settings</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="linkedin">Linkedin</string>
    <string name="twitter">Twitter</string>
    <string name="alerta">Alert (m)</string>
    <string name="hint_minutos">e.g. 60</string>
    <string name="botao_cadastrar">Save</string>
    <string name="configuracoes_sucesso">Settings saved successfully.</string>
    <string name="instrucoes">Activate the social networks you want to monitor and if necessary set an alert to be notified when the time is exceeded.</string>

    <!-- VISUALIZAR HISTORICO -->
    <string name="tela_historico">History</string>

    <!-- VALIDAÇÕES GERAIS -->
    <string name="preencha_campos">Please fill in all the fields.</string>
    <string name="verificar_conexao">Check your internet connection.</string>
    <string name="habilitar_permissao">To continue, you must give the app access permission. On the screen that opens, select the My Life Back application and enable the permission.</string>
    <string name="permissao_cancelada">To continue, you must enable the permission.</string>

    <!-- NOTIFICAÇÃO -->
    <string name="monitor">Monitoring Enabled</string>
    <string name="notificacao_alerta">%1$s Alert</string>
    <string name="historico_detalhes">Visit app history for more details.</string>
    <string name="parar_servico">Stop</string>
    <string name="ok_notificação">OK</string>
    <string name="tempo_excedido">The configured usage time has been exceeded.</string>

    <!-- COMPARTILHAR -->
    <string name="recomendo_aplicativo">I recommend this app</string>
    <string name="selecione_opcao_compartilhar">Select an option</string>

    <!-- CONTATO -->
    <string name="tela_contato">Contact</string>
    <string name="erro">Error:</string>
    <string name="modelo_dispositivo">Device Model</string>
    <string name="versao_android">Android version</string>
    <string name="mensagem">Message</string>
    <string name="mensagem_erro_titulo">An error has occurred</string>
    <string name="mensagem_erro">Please inform the developer</string>
    <string name="botao_enviar">Send</string>
    <string name="botao_ok">OK</string>
    <string name="botao_cancelar">Cancel</string>
    <string name="aplicacao_email">Select the email application</string>
    <string name="mensagem_sucesso">Message sent successfully, we will contact you. Thanks.</string>
    <string name="sugestoes_reclamacoes">Your suggestions, complaints, compliments and doubts are always welcome!</string>

    <!-- SOBRE -->
    <string name="tela_sobre">About</string>
    <string name="logo_descricao">Application logo</string>
    <string name="versão">Version %1$s</string>
    <string name="politica_privacidade">Privacy policy</string>
    <string name="easter_egg_descricao">Easter egg</string>

</resources>
