<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="20sp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_marginTop="10sp"
    android:layout_marginEnd="20sp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3sp"
        android:layout_marginEnd="3sp"
        android:layout_marginBottom="10sp"
        android:text="@string/sugestoes_reclamacoes"
        android:textColor="@color/colorBlack" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txtDescricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:hint="@string/mensagem"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            tools:ignore="Autofill" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnEnviar"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/botao_enviar" />

</LinearLayout>