<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="20sp"
            android:layout_marginBottom="10sp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgFacebook"
                android:layout_width="35sp"
                android:layout_height="35sp"
                android:layout_marginEnd="10sp"
                android:layout_marginRight="10sp"
                android:contentDescription="@string/facebook"
                android:src="@drawable/facebook_icone" />

            <Switch
                android:id="@+id/swtFacebook"
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10sp"
                android:layout_marginRight="10sp"
                android:checked="false"
                android:text="@string/facebook" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtMinutosDiaFacebook"
                    tools:ignore="Autofill"
                    android:layout_width="95sp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10sp"
                    android:layout_marginRight="10sp"
                    android:hint="@string/minutos_dia"
                    android:inputType="number"
                    android:scrollbars="vertical"
                    android:text="@string/hint_minutos" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="40sp"
            android:layout_marginEnd="40sp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="20sp"
            android:layout_marginBottom="10sp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgInstagram"
                android:layout_width="35sp"
                android:layout_height="35sp"
                android:layout_marginEnd="10sp"
                android:layout_marginRight="10sp"
                android:contentDescription="@string/instagram"
                android:src="@drawable/instagram_icone" />

            <Switch
                android:id="@+id/swtInstagram"
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10sp"
                android:layout_marginRight="10sp"
                android:checked="false"
                android:text="@string/instagram" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtMinutosDiaInstagram"
                    tools:ignore="Autofill"
                    android:layout_width="95sp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10sp"
                    android:layout_marginRight="10sp"
                    android:hint="@string/minutos_dia"
                    android:inputType="number"
                    android:scrollbars="vertical"
                    android:text="@string/hint_minutos" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="40sp"
            android:layout_marginEnd="40sp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="20sp"
            android:layout_marginBottom="10sp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgLinkedin"
                android:layout_width="35sp"
                android:layout_height="35sp"
                android:layout_marginEnd="10sp"
                android:layout_marginRight="10sp"
                android:contentDescription="@string/linkedin"
                android:src="@drawable/linkedin_icone" />

            <Switch
                android:id="@+id/swtLinkedin"
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10sp"
                android:layout_marginRight="10sp"
                android:checked="false"
                android:text="@string/linkedin" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtMinutosDiaLinkedin"
                    tools:ignore="Autofill"
                    android:layout_width="95sp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10sp"
                    android:layout_marginRight="10sp"
                    android:hint="@string/minutos_dia"
                    android:inputType="number"
                    android:scrollbars="vertical"
                    android:text="@string/hint_minutos" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="40sp"
            android:layout_marginEnd="40sp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="20sp"
            android:layout_marginBottom="10sp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgTwitter"
                android:layout_width="35sp"
                android:layout_height="35sp"
                android:layout_marginEnd="10sp"
                android:layout_marginRight="10sp"
                android:contentDescription="@string/twitter"
                android:src="@drawable/twitter_icone" />

            <Switch
                android:id="@+id/swtTwitter"
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10sp"
                android:layout_marginRight="10sp"
                android:checked="false"
                android:text="@string/twitter" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtMinutosDiaTwitter"
                    tools:ignore="Autofill"
                    android:layout_width="95sp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10sp"
                    android:layout_marginRight="10sp"
                    android:hint="@string/minutos_dia"
                    android:inputType="number"
                    android:scrollbars="vertical"
                    android:text="@string/hint_minutos" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="40sp"
            android:layout_marginEnd="40sp"
            android:background="@android:color/darker_gray" />

        <Button
            android:id="@+id/btnSalvar"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:text="@string/botao_cadastrar" />

    </LinearLayout>
</ScrollView>


