<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10sp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:textSize="16sp"
            android:layout_marginBottom="14sp"
            android:text="@string/bem_vindo"
            android:textColor="@color/colorBlack" />

        <android.support.v7.widget.CardView
            android:id="@+id/cvConfiguracoes"
            app:cardCornerRadius="3dp"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10sp"
                android:drawableStart="@drawable/monitoramento_icone"
                android:drawableLeft="@drawable/monitoramento_icone"
                android:drawablePadding="10sp"
                android:gravity="center"
                android:text="@string/configurar_monitoramento"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="20sp"
                android:layout_height="20sp"
                android:layout_gravity="right|center_vertical"
                android:layout_marginEnd="10sp"
                android:layout_marginRight="10sp"
                android:contentDescription="@string/configurar_monitoramento"
                android:src="@drawable/seta_icone"
                tools:ignore="RtlHardcoded" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cvVisualizarHistorico"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="5sp"
            app:cardCornerRadius="3dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10sp"
                android:drawableStart="@drawable/historico_icone"
                android:drawableLeft="@drawable/historico_icone"
                android:drawablePadding="10sp"
                android:gravity="center"
                android:text="@string/visualizar_historico"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="20sp"
                android:layout_height="20sp"
                android:layout_gravity="right|center_vertical"
                android:layout_marginEnd="10sp"
                android:layout_marginRight="10sp"
                android:contentDescription="@string/visualizar_historico"
                android:src="@drawable/seta_icone"
                tools:ignore="RtlHardcoded" />
        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>